<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.revtwo.revtwo.MainActivity">
    <item
        android:id="@+id/action_end_call"
        android:orderInCategory="100"
        android:title="@string/action_end_call_label"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_mute_call"
        android:orderInCategory="101"
        android:title="@string/action_mute_call_label"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_use_speaker"
        android:orderInCategory="102"
        android:title="@string/action_use_speaker_label"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings_label"
        app:showAsAction="never" />
</menu>
